--- a/Baltimore_Parking_Citation_Analysis_April_2019_Vs_2020.ipynb
+++ b/Baltimore_Parking_Citation_Analysis_April_2019_Vs_2020.ipynb
@@ -6,7 +6,7 @@
       "name": "Project_2_Baltimore_Parking_Citation_Analysis_April_2019_Vs_2020.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyP3Pf3W6VhSZyNvPFkRgWXm",
+      "authorship_tag": "ABX9TyOjOeapogSSttbb31KH4Rbt",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -140,7 +140,7 @@
         }
       },
       "source": [
-        "parking_citations = pd.read_csv(\"https://data.baltimorecity.gov/api/views/n4ma-fj3m/rows.csv\")"
+        "parking_citations = pd.read_csv(\"https://data.baltimorecity.gov/api/views/n4ma-fj3m/rows.csv\") #loading the data "
       ],
       "execution_count": 95,
       "outputs": [
@@ -501,7 +501,7 @@
         "id": "ahFMr3Xq9SWo"
       },
       "source": [
-        "parking_citations[\"ViolDate\"] = pd.to_datetime(parking_citations[\"ViolDate\"], format = \"%m/%d/%Y %I:%M:%S %p\" )"
+        "parking_citations[\"ViolDate\"] = pd.to_datetime(parking_citations[\"ViolDate\"], format = \"%m/%d/%Y %I:%M:%S %p\" ) #converting the Violation date column to date time type"
       ],
       "execution_count": 99,
       "outputs": []
@@ -551,7 +551,7 @@
         "id": "JM8aa7XK9Ydn"
       },
       "source": [
-        "data = parking_citations[(parking_citations[\"ViolDate\"].dt.month == 4) & (parking_citations[\"ViolDate\"].dt.year.isin([2019,2020]))]"
+        "data = parking_citations[(parking_citations[\"ViolDate\"].dt.month == 4) & (parking_citations[\"ViolDate\"].dt.year.isin([2019,2020]))] # Extracting the April month data for the years 2019 and 2020"
       ],
       "execution_count": 101,
       "outputs": []
@@ -566,7 +566,7 @@
         }
       },
       "source": [
-        "data[\"ViolDate\"].dt.year.value_counts()"
+        "data[\"ViolDate\"].dt.year.value_counts() #Looking at the number of violations that occured during 2019 and 2020"
       ],
       "execution_count": 102,
       "outputs": [
@@ -1159,7 +1159,7 @@
         }
       },
       "source": [
-        "data[data[\"Tag\"] ==\"2EC7233\" ].groupby(\"Description\")[\"Description\"].count()"
+        "data[data[\"Tag\"] ==\"2EC7233\" ].groupby(\"Description\")[\"Description\"].count() #The violation types commited by the most violations vehicle"
       ],
       "execution_count": 112,
       "outputs": [
@@ -1191,7 +1191,7 @@
         }
       },
       "source": [
-        "data[data[\"Tag\"] ==\"8DW4455\" ].groupby(\"Description\")[\"Description\"].count()"
+        "data[data[\"Tag\"] ==\"8DW4455\" ].groupby(\"Description\")[\"Description\"].count() #The violation types commited by the second most violations vehicle"
       ],
       "execution_count": 113,
       "outputs": [
